@@ -1,3 +1,7 @@
+*** 20010624_5 by greg
+- turning _BACK_ config.h level *glare*
+
+
 *** 20010624_4 by greg
 - cough, compile check failed
 - revving config.h level
